# bevy_slyedoc

./: .eslintrc  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json  vite.config.ts
broken/: readme.md
broken/boids-compute/: Cargo.toml  main.ts  readme.md
broken/boids-compute/src/: main.rs  update.wgsl
broken/breakout/: Cargo.toml
broken/breakout/src/: lib.rs
broken/cornell_box/: Cargo.toml
broken/flappy/: Cargo.toml
broken/flappy/src/: lib.rs
broken/mold/: Cargo.toml  readme.md
broken/mold/src/: display.wgsl  lib.rs  main.rs  simulation.wgsl
broken/n_body/: Cargo.toml
broken/n_body/src/: lib.rs
broken/path_finding/: Cargo.toml
broken/path_finding/src/: lib.rs
broken/tic_tac_toe/: Cargo.toml
broken/tic_tac_toe/src/: board.rs  lib.rs  main.rs
crates/boids/: Cargo.toml  index.vue
crates/boids/src/: lib.rs  main.rs
crates/cornell_box/: Cargo.toml  index.vue
crates/cornell_box/src/: lib.rs
crates/disco/: Cargo.toml  index.vue  readme.md
crates/disco/src/: lib.rs  main.rs
crates/engine/: Cargo.toml
crates/engine/examples/: custom.rs
crates/engine/src/: lib.rs
crates/engine/src/editor/: mod.rs  resource_inspector.rs  ui.rs
crates/engine/src/shapes/: capsule.rs  icosphere.rs  torus.rs  uvsphere.rs
crates/mold/: Cargo.toml  readme.md
crates/mold/src/: lib.rs
crates/path_finding/: Cargo.toml
crates/path_finding/src/: main.rs
crates/snake/: Cargo.toml  readme.md
crates/snake/src/: lib.rs  main.rs
crates/sponza/: Cargo.toml  readme.md
crates/sponza/src/: lib.rs  main.rs
crates/ui_demo/: Cargo.toml  readme.md
crates/ui_demo/src/: lib.rs
engine/: Cargo.toml
engine/examples/: custom.rs  disco.rs  many_cubes.rs
engine/src/: camera_controller.rs  lib.rs
engine/src/editor/: mod.rs  resource_inspector.rs  ui.rs
engine/src/loaders/: mod.rs  ron_asset.rs
engine/src/materials/: custom.rs  mod.rs
engine/src/shapes/: capsule.rs  icosphere.rs  mod.rs  torus.rs  uvsphere.rs
frontend/: .eslintrc  .gitignore  .rsw.json  Cargo.toml  index.html  notes.txt  package.json  readme.md
frontend/games_broken/breakout/: Cargo.toml
frontend/games_broken/breakout/src/: main.rs
frontend/games_broken/flappy/: Cargo.toml
frontend/games_broken/flappy/src/: main.rs
frontend/games_broken/n_body/: Cargo.toml
frontend/games_broken/n_body/src/: main.rs
frontend/public/: test.html
frontend/public/wasm/: .gitignore
frontend/src/: components.d.ts  index.vue  main.ts
frontend/src/components/: BevyWasm.vue  HelloWorld.vue  WasmCornellBox.vue  WasmDisco.vue
frontend/src/layouts/: default.vue  wasm.vue
frontend/src/modules/: wasm.ts
frontend/src/pages/: about.vue  cornell_box.vue  disco.vue  index.vue
frontend/src/pages/crates/: [name].vue
src/: App.vue  components.d.ts  main.rs  main.ts  wasm.ts
src/components/: BevyWasm.vue  Footer.vue  webgpu-notes.vue
src/layouts/: default.vue  wasm.vue
src/modules/: vuetify.ts
src/pages/: about.vue  boids.vue  disco.vue  index.vue  snake.vue  sponza.vue  test.vue  ui_demo.vue
src/pages/wasm/: [name].vue
src/styles/: main.css
src/wasm/: boids.js  boids.md  boids_bg.wasm.d.ts  disco.d.ts  disco.js  disco_bg.wasm.d.ts  list.json  snake.d.ts  snake.js  snake_bg.wasm.d.ts  sponza.d.ts  sponza.js  ui_demo.d.ts  ui_demo.js  ui_demo.md  ui_demo_bg.wasm  ui_demo_bg.wasm.d.ts
src/wasm/mold/: index.vue
src/wasm/path_finding/: index.vue
src/wasm/snake/: index.vue
src/wasm_dist/: boids.js  disco.js  snake.d.ts  snake_bg.wasm.d.ts  ui_demo.d.ts  ui_demo.js
tools/: deploy.sh  vite-plugin-bevy.ts
tools/pack/: Cargo.toml
tools/pack/src/: main.rs
tools/vite-plugin-rust-wasm/: client.d.ts  index.ts  readme.md
tools/vite-plugin-vue-bevy/: client.d.ts  index.ts  readme.md
