
[workspace]
members = [
    "engine",
    "games/*",
]
resolver = "2"


[patch.crates-io]
bevy = { path = "../../../bevy" }
#bevy = { git = "https://github.com/slyedoc/bevy", branch = "main" }
#bevy_asset_loader = { path = "../bevy_asset_loader/bevy_asset_loader" }
#bevy_egui = { path = "../bevy_egui" }
bevy_egui = { git = "https://github.com/slyedoc/bevy_egui", branch = "pipelined" }
#bevy-inspector-egui = { path = "../bevy-inspector-egui" }
bevy-inspector-egui = { git = "https://github.com/slyedoc/bevy-inspector-egui", branch = "pipelined-editor" }
crevice = { git = "https://github.com/slyedoc/bevy", branch = "main" }
#bevy-inspector-egui = { git = "https://github.com/slyedoc/bevy-inspector-egui", branch = "pipelined-editor" }
#bevy_rapier2d = { path = "../bevy_rapier/bevy_rapier2d" }
#nalgebra = { path = "../nalgebra" }
#bevy_rapier2d = { git = "https://github.com/slyedoc/bevy_rapier", branch = "bevy-main-fixes" }
#parry3d = { git = "https://github.com/deontologician/parry", branch = "bevy-components" }
#parry2d = { git = "https://github.com/deontologician/parry", branch = "bevy-components" }
#rapier3d = { git = "https://github.com/deontologician/rapier", branch = "dep-hacks" }
#rapier2d = { git = "https://github.com/deontologician/rapier", branch = "dep-hacks" }