[package]
name = "boids_compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

# [profile.dev]
# opt-level = 1

# [features]
# dev = ["bevy/dynamic"]

[dependencies]
bevy = "0.5.0"
engine = { path = "../engine" }
wasm-bindgen = "0.2.78"
wgpu-types = "0.11"
wgpu = "0.11.1"
rand = "0.8"
bytemuck = { version = "1.4", features = [ "derive" ] }
image = "0.23"