[package]
name = "flappy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine = { path = "../../engine" }
wasm-bindgen = "0.2.78"
bevy = { version = "0.5.0", default-features = false,    features = [
     "bevy_render2",
     "bevy_winit",
     "bevy_core_pipeline"
]}
# should be better way to add crevice
crevice = { version = "0.8.0", features = ["glam"] }
bevy-inspector-egui = "0.6.1"
bevy_rapier2d = { version = "0.11", features = [ "simd-stable", "render", "parallel" ] }
rand = "0.8.4"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11"]}

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}