[package]
name = "boids"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


# [features]
# dev = ["bevy/dynamic"]

[dependencies]
bevy = { version = "0.5.0", default-features = false, features = [
     "render",
     "bevy_winit",
     "bevy_core_pipeline",
     "png",
]}
bevy-inspector-egui = { version = "0.6.1" }
engine = { path = "../engine" }

wasm-bindgen = "0.2.78"
wgpu-types = "0.11"
wgpu = "0.11.1"
rand = "0.8"
bytemuck = { version = "1.4", features = [ "derive" ] }
image = "0.23"