[package]
name = "boids"
description = "2d ecs boid simulation"
version = "0.1.1"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]
# [features]
# dev = ["bevy/dynamic"]


[dependencies]
engine = { path = "../../engine" }
bevy = { version = "0.5.0", default-features = false, features = [
     "bevy_render",
     "bevy_winit",
     "bevy_core_pipeline",
     "png",
]}
bevy-inspector-egui = { version = "0.6.1" }
rand = "0.8"
bytemuck = { version = "1.4", features = [ "derive" ] }
image = "0.23"
wasm-bindgen = "0.2.78"