[package]
name = "cornell_box"
version = "0.1.0"
edition = "2021"
resolver="2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.5.0", default-features = false, features = [
     "render",
     "bevy_winit",
     "bevy_core_pipeline"
]}
bevy-inspector-egui = "0.6.1"
wasm-bindgen = "0.2.78"
engine = { path = "../engine" }

