[package]
name = "disco"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine = { path = "../engine" }
wasm-bindgen = "0.2.78"
bevy = { version = "0.5.0", default-features = false,    features = [
     "render",
     "bevy_winit",
     "bevy_core_pipeline"
]}
bevy-inspector-egui = "0.6.1"
ron = "0.7"
rand = "0.8"
serde = { version = "1.0.130", features = ["serde_derive"] }