[package]
name = "sponza"
description = "Sponza Scene (slow to load assets)"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.5.0", default-features = false, features = [
     "bevy_render",
     "bevy_winit",
     "bevy_core_pipeline",
     "bevy_gltf",
     "png",
     "jpeg"
]}
bevy-inspector-egui = "0.6.1"
engine = { path = "../../engine" }
wasm-bindgen = "0.2.78"
bevy_mod_picking = "0.4.0"
bevy_mod_raycast = "0.2.2"

