[package]
name = "ui_demo"
description = "A more realistice UI example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine = { path = "../../engine" }
wasm-bindgen = "0.2.78"
bevy = { version = "0.5.0", default-features = false,    features = [
     "bevy_render",
     "bevy_winit",
     "bevy_core_pipeline",
     "png"
]}
bevy-inspector-egui = { git = "https://github.com/slyedoc/bevy-inspector-egui", branch = "bevy-main" }